styled dropdown. Fixed 'x' alignment

--- a/static/style.css
+++ b/static/style.css
@@ -130,7 +130,9 @@ header {
 .red-x {
 	position: absolute;
 	display: none;
-	opacity: 0.7;
+	opacity: 0.6;
+	margin-top: 6px;
+	margin-left: 9px;
 }
 
 iframe {
@@ -224,6 +226,7 @@ hr {
  	padding-left: 10px;
  }
 
- .dropdown-item {
- 	padding-left: 36px;
+
+ #fav-a {
+ 	padding-left: 35px;
  }
